--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-heroku==0.3.1
 gunicorn==20.0.4
 Pillow==7.1.1
 psycopg2==2.7.5
+psycopg2-binary==2.7.7
 pytz==2019.3
 sqlparse==0.3.1
 whitenoise==5.0.1
