--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@
 *.pyo
 __pycache__/
 
-**/migrations/**
-!**/migrations
-!**/migrations/__init__.py
+# **/migrations/**
+# !**/migrations
+# !**/migrations/__init__.py
 db.sqlite*
 .DS_Store*
 staticfiles/
