--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,10 @@
 *.pyo
 __pycache__/
 
-# **/migrations/**
-# !**/migrations
-# !**/migrations/__init__.py
-db.sqlite*
+**/migrations/**
+!**/migrations
+!**/migrations/__init__.py
+db.sqlite*                            
 .DS_Store*
 staticfiles/
 
